# GA-ePINN

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
examples/: run_beam.py  run_plate_aspect_ratio.py  run_plate_hole_fixed.py  run_plate_hole_parametric.py  run_plate_two_holes.py
src/gaepinn/beam/: __init__.py  beam.py
src/gaepinn/plate/: aspect_ratio.py  hole_fixed.py  hole_parametric.py  two_holes.py
